# Stravation

./: .gitignore  pyproject.toml  stravanotion.sqlite3  test.py  tmp.envline
scripts/: backfill_strava.py
stravation/: cli.py  config.py  log.py  places.py  theme.py
stravation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
stravation/core/: models.py  planner.py
stravation/features/: plan_to_calendar.py  routes_to_notion.py  strava_to_notion.py
stravation/integrations/: gcal_client.py  notion_client.py  strava_client.py
stravation/models/: plan_session.py
stravation/services/: gcal_service.py  google_calendar.py  notion_plans.py  strava_service.py
stravation/storage/: db.py
stravation/ui/: mini_app.py
stravation/ui/views/: plan_programmer.py
stravation/ui/widgets/: calendar_view.py
stravation/utils/: dates.py  envtools.py
tools/: compact_credentials.py  list_cals.py
ui/: mini_app.py
